# rust-axum-rest-api

./: .env  .gitignore  Cargo.toml  README.md
migrations/: 0001_create_users.sql
src/: main.rs
src/db/: db.rs
src/dto/: mod.rs  task.rs  token.rs  user.rs
src/entities/: task.rs  user.rs
src/errors/: api.rs  db.rs  mod.rs  request.rs  task.rs  token.rs  user.rs
src/handlers/: mod.rs  user.rs
src/middleware/: auth.rs
src/repositories/: user.rs
src/response/: api_response.rs  mod.rs
src/routes/: auth.rs  profile.rs  register.rs  root.rs
src/services/: token.rs  user.rs
src/settings/: settings.rs
src/states/: user.rs
