[package]
name = "task_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
# --- Axum и базовые инструменты ---
axum = "0.7.9"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14.32", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.5.2", features = ["cors", "trace", "timeout"] }
headers = "0.4.0"
# --- Серде и JSON ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --- Работа с переменными окружения ---
dotenv = "0.15.0"

# --- SQLx с поддержкой PostgreSQL и rustls (для musl static build) ---
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "chrono", "migrate"] }
sqlx-cli = "0.8.2"

# --- Утилиты ---
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "9.3.0"
thiserror = "2.0.9"
bcrypt = "0.16.0"
validator = { version = "0.19.0", features = ["derive"] }
async-trait = "0.1.83"

# --- Документация (Swagger) ---
utoipa = "5.3.0"
utoipa-swagger-ui = "8.1.0"
